--- a/pom.xml
+++ b/pom.xml
@@ -1,110 +1,109 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>jBehaveSimple</groupId>
-  <artifactId>jBehaveSimple</artifactId>
-  <version>1.0-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>jBehaveSimple</groupId>
+    <artifactId>jBehaveSimple</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-  <name>Simple acceptance test with JBehave</name>
+    <name>Simple acceptance test with JBehave</name>
 
-  <properties>
-    <jbehave.core.version>3.9</jbehave.core.version>
-    <jbehave.site.version>3.1.1</jbehave.site.version>
-    <embeddables>**/*Stories.java</embeddables>
-    <webdriver.version>2.39.0</webdriver.version>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <jbehave.core.version>3.9</jbehave.core.version>
+        <jbehave.site.version>3.1.1</jbehave.site.version>
+        <embeddables>**/*Story.java</embeddables>
+        <webdriver.version>2.39.0</webdriver.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.jbehave</groupId>
-      <artifactId>jbehave-core</artifactId>
-      <version>${jbehave.core.version}</version>
-      <scope>test</scope>
-    </dependency>
-      <dependency>
-          <groupId>org.seleniumhq.selenium</groupId>
-          <artifactId>selenium-java</artifactId>
-          <version>${webdriver.version}</version>
-          <scope>test</scope>
-      </dependency>
-  </dependencies>
-
-  <build>
-    <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
-    <resources>
-      <resource>
-        <directory>${basedir}/src/test/java</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>
-          <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
-          </configuration>
-        </plugin>
-          <!--<plugin>-->
-              <!--<groupId>org.apache.maven.plugins</groupId>-->
-              <!--<artifactId>maven-surefire-plugin</artifactId>-->
-              <!--<version>2.12.3</version>-->
-              <!--<configuration>-->
-                  <!--<includes>-->
-                      <!--<include>**/*Story.java</include>-->
-                  <!--</includes>-->
-              <!--</configuration>-->
-          <!--</plugin>-->
-      </plugins>
-    </pluginManagement>
-
-    <plugins>
-        <plugin>
+    <dependencies>
+        <dependency>
             <groupId>org.jbehave</groupId>
-            <artifactId>jbehave-maven-plugin</artifactId>
+            <artifactId>jbehave-core</artifactId>
             <version>${jbehave.core.version}</version>
-            <executions>
-                <execution>
-                    <id>unpack-view-resources</id>
-                    <phase>process-resources</phase>
-                    <goals>
-                        <goal>unpack-view-resources</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>embeddable-stories</id>
-                    <phase>integration-test</phase>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${webdriver.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>${basedir}/src/test/java</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
                     <configuration>
-                        <includes>
-                            <include>${embeddables}</include>
-                        </includes>
-                        <excludes/>
-                        <systemProperties>
-                            <property>
-                                <name>file.encoding</name>
-                                <value>${project.build.sourceEncoding}</value>
-                            </property>
-                        </systemProperties>
-                        <ignoreFailureInStories>false</ignoreFailureInStories>
-                        <ignoreFailureInView>false</ignoreFailureInView>
-                        <threads>1</threads>
-                        <metaFilters>
-                            <metaFilter/>
-                        </metaFilters>
+                        <source>1.6</source>
+                        <target>1.6</target>
                     </configuration>
-                    <goals>
-                        <goal>run-stories-as-embeddables</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-  </build>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.13</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Story.java</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack-jbehave-reports-resources</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.jbehave</groupId>
+                                    <artifactId>jbehave-core</artifactId>
+                                    <version>${jbehave.core.version}</version>
+                                    <outputDirectory>${project.build.directory}/jbehave/view</outputDirectory>
+                                    <includes>**\/*.css,**\/*.ftl,**\/*.js</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
